# DeclarativeWidgets

./: .gitignore  .krazy  .pre-commit-config.yaml  .qmake.conf  CMakeLists.txt  CMakePresets.json  INSTALL.txt  Install.txt  LICENSE.GPL.txt  LICENSE.US.txt  LICENSE.txt  README  README.txt  ReadMe-commercial.txt  ReadMe.txt  browser.qml  declarativeobjects.cpp  declarativeobjects_p.h  declarativewidgetdocument.cpp  declarativewidgetdocument.h  declarativewidgets.pro  dialogs.qml  editor.qml  filedialog.qml  gallery.qml  inputdialog.qml  layouts.qml  main.cpp  messagebox.qml  objectadaptors.cpp  objectadaptors_p.h  qmetaobjectbuilder.cpp  qmetaobjectbuilder_p.h  qmlwidgets.pro  qwidgets.list  runner.pro  test.qml
.zed/: settings.json
declarativewidgets/: declarativeboxlayout_p.h  declarativebuttongroupextension.cpp  declarativecolordialog_p.h  declarativefiledialog.cpp  declarativeformlayout_p.h  declarativehboxlayout_p.h  (+17 more)
examples/: CMakeLists.txt  animation.qml  browser.qml  declarativeview.qml  declarativeview_qqtest.qml  dialogs.qml  editor.qml  examples.pri  examples.pro  filedialog.qml  gallery.qml  layouts.qml  messagebox.qml  test.qml  widgetproperties.qml
examples/bookstore/: CMakeLists.txt  README.txt  booklistproxymodel.cpp  booklistproxymodel.h  booksofauthormodel.cpp  booksofauthormodel.h  bookstore.cpp  bookstore.db  bookstore.h  bookstore.pro  bookstore.qrc  bookstore.sqlite3.sql  main.cpp
examples/bookstore/qtquick/: Shop.qml  main.qml
examples/bookstore/widgets/: Admin.qml  Developer.qml  Staff.qml  main.qml
examples/config-editor/: CMakeLists.txt  README.txt  config-editor.pro  configeditor.cpp  configeditor.h  main.cpp  main.qml  settingsadaptor.cpp  settingsadaptor.h
examples/config-editor/demodata/: akonadiserverrc  akonadiserverrc-editor.qml
examples/text-editor/: CMakeLists.txt  editor.cpp  editor.h  main.cpp  main.qml  text-editor.pro  text-editor.qrc
src/: CMakeLists.txt  abstractdeclarativeobject.cpp  abstractdeclarativeobject_p.h  declarativeabstractbuttonextension.cpp  declarativeabstractbuttonextension_p.h  declarativeaction.cpp  declarativeaction_p.h  declarativeactionitem.cpp  declarativeactionitem_p.h  declarativeboxlayout.cpp  declarativeboxlayout_p.h  declarativebuttongroupextension.cpp  declarativebuttongroupextension_p.h  declarativecolordialog.cpp  declarativecolordialog_p.h  declarativecomboboxextension.cpp  declarativecomboboxextension_p.h  declarativecontainerwidgetextension_p.h  declarativefiledialog.cpp  declarativefiledialog_p.h  declarativefilesystemmodelextension.cpp  declarativefilesystemmodelextension_p.h  declarativefontdialog.cpp  declarativefontdialog_p.h  declarativeformlayout.cpp  declarativeformlayout_p.h  declarativegridlayout.cpp  declarativegridlayout_p.h  declarativehboxlayout.cpp  declarativehboxlayout_p.h  declarativeicon.cpp  declarativeicon_p.h  declarativeiconloader.cpp  declarativeiconloader_p.h  declarativeinputdialog.cpp  declarativeinputdialog_p.h  declarativeitemviewextension.cpp  declarativeitemviewextension_p.h  declarativelabelextension.cpp  declarativelabelextension_p.h  (+84 more)
tests/: CMakeLists.txt  rectangle.qml  tests.pro  tests.qrc  tst_declarativeview.cpp
tests/auto/: auto.pri  auto.pro
tests/auto/instantiatetypes/: instantiatetypes.pro  qml.qrc  tst_instantiatetypes.cpp
tests/auto/instantiatetypes/qml/creatable/core/: StringListModel.qml  Timer.qml
tests/auto/instantiatetypes/qml/creatable/layouts/: FormLayout.qml  GridLayout.qml  HBoxLayout.qml  StackedLayout.qml  VBoxLayout.qml
tests/auto/instantiatetypes/qml/creatable/objects/: Action.qml  ActionItem.qml  ButtonGroup.qml  FileSystemModel.qml  Icon.qml  QmlContext.qml  QmlContextProperty.qml  Separator.qml  TabStops.qml
tests/auto/instantiatetypes/qml/creatable/webenginewidgets/: WebEngineView.qml
tests/auto/instantiatetypes/qml/creatable/widgets/: CalendarWidget.qml  CheckBox.qml  ColorDialog.qml  ColumnView.qml  ComboBox.qml  CommandLinkButton.qml  DateEdit.qml  DateTimeEdit.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  DoubleSpinBox.qml  FileDialog.qml  FontDialog.qml  Frame.qml  GroupBox.qml  InputDialog.qml  LCDNumber.qml  Label.qml  LineEdit.qml  ListView.qml  MainWindow.qml  Menu.qml  MenuBar.qml  MessageBox.qml  PlainTextEdit.qml  ProgressBar.qml  PushButton.qml  QuickWidget.qml  RadioButton.qml  ScrollArea.qml  ScrollBar.qml  Slider.qml  SpinBox.qml  Splitter.qml  StackedWidget.qml  StatusBar.qml  TabWidget.qml  TableView.qml  TextBrowser.qml  (+7 more)
tests/auto/instantiatetypes/qml/uncreatable/: AbstractItemModel.qml  HeaderView.qml  ItemSelectionModel.qml  TextDocument.qml
tests/auto/layouts/: formlayout.ui  formlayoutwidget.cpp  formlayoutwidget.h  gridlayout.ui  gridlayoutwidget.cpp  gridlayoutwidget.h  hboxlayout.ui  hboxlayoutwidget.cpp  hboxlayoutwidget.h  layouts.pro  qml.qrc  splitter.cpp  splitter.h  splitter.ui  stackedlayoutwidget.cpp  stackedlayoutwidget.h  stackedwidget.cpp  stackedwidget.h  stackedwidget.ui  tst_layouts.cpp  vboxlayout.ui  vboxlayoutwidget.cpp  vboxlayoutwidget.h
tests/auto/layouts/qml/: FormLayoutTest.qml  GridLayoutTest.qml  HBoxLayoutTest.qml  SplitterTest.qml  StackedLayoutTest.qml  StackedWidgetTest.qml  VBoxLayoutTest.qml
tests/auto/qmlplugins/: qmlplugins.pro  tst_qmlplugins.cpp
tests/auto/quickwidget/: quickwidget.pro  rectangle-context.qml  rectangle.qml  tst_quickwidget.cpp
ui2dw/: CMakeLists.txt  buddyvisitor.cpp  buddyvisitor.h  connectionnodevisitor.cpp  connectionnodevisitor.h  elementnamevisitor.cpp  elementnamevisitor.h  fontproperyvisitor.cpp  fontproperyvisitor.h  idvisitor.cpp  idvisitor.h  itemvisitor.cpp  itemvisitor.h  layoutvisitor.cpp  layoutvisitor.h  main.cpp  parser.cpp  parser.h  qmlwriter.cpp  qmlwriter.h  tabstopsnodevisitor.cpp  tabstopsnodevisitor.h  ui2dw.pro  uiactionnode.cpp  uiactionnode.h  uiaddactionnode.cpp  uiaddactionnode.h  uiconnectionnode.cpp  uiconnectionnode.h  uiitemnode.cpp  uiitemnode.h  uilayoutitemnode.cpp  uilayoutitemnode.h  uilayoutnode.cpp  uilayoutnode.h  uinode.cpp  uinode.h  uinodevisitor.cpp  uinodevisitor.h  uiobjectnode.cpp  (+11 more)
(+210 files in other folders)
